--- a/src/app/login-page/login-page.component.html
+++ b/src/app/login-page/login-page.component.html
@@ -1,28 +1,29 @@
-<div class="card">
-    <h4 class="card-header">Login</h4>
-    <div class="card-body">
-        <form [formGroup]="form" (ngSubmit)="onSubmit()">
-            <div class="mb-3">
-                <label class="form-label">Email</label>
-                <input type="text" formControlName="email" class="form-control" [ngClass]="{ 'is-invalid': submitted && formControls['email'].errors }" />
-                <div *ngIf="submitted && formControls['email'].errors" class="invalid-feedback">
-                    <div *ngIf="formControls['email'].errors['required']">Email is required</div>
+<body>
+    <div class="card">
+        <h1 class="card-header">Login</h1>
+        <div class="card-body">
+            <form [formGroup]="form" (ngSubmit)="onSubmit()">
+                <div class="mb-3">
+                    <input type="text" placeholder="Email" formControlName="email" class="form-control" [ngClass]="{ 'is-invalid': submitted && formControls['email'].errors }" />
+                    <div *ngIf="submitted && formControls['email'].errors" class="invalid-feedback">
+                        <div *ngIf="formControls['email'].errors['required']">Email is required</div>
+                    </div>
                 </div>
-            </div>
-            <div class="mb-3">
-                <label class="form-label">Password</label>
-                <input type="password" formControlName="password" class="form-control" [ngClass]="{ 'is-invalid': submitted && formControls['password'].errors }" />
-                <div *ngIf="submitted && formControls['password'].errors" class="invalid-feedback">
-                    <div *ngIf="formControls['password'].errors['required']">Password is required</div>
+                <div class="mb-3">
+                    <input type="password" placeholder="Password" formControlName="password" class="form-control" [ngClass]="{ 'is-invalid': submitted && formControls['password'].errors }" />
+                    <div *ngIf="submitted && formControls['password'].errors" class="invalid-feedback">
+                        <div *ngIf="formControls['password'].errors['required']">Password is required</div>
+                    </div>
                 </div>
-            </div>
-            <div>
-                <button [disabled]="loading" class="btn btn-primary">
-                    <span *ngIf="loading" class="spinner-border spinner-border-sm me-1"></span>
-                    Login
-                </button>
-                <a routerLink="../registration" class="btn btn-link">Register</a>
-            </div>
-        </form>
+                <div class="buttons">
+                    <button [disabled]="loading" class="btn btn-primary" style="display: inline-block;">
+                      <span *ngIf="loading" class="spinner-border spinner-border-sm me-1"></span>
+                      Login
+                    </button>
+                    <button routerLink="../registration" class="btn btn-primary" style="display: inline-block;">Register</button>
+                    <button routerLink="../advertisement" class="btn-browse">Advertisements</button>
+                </div>
+            </form>
+        </div>
     </div>
-</div>
+</body>
