--- a/src/app/login-page/login-page.component.css
+++ b/src/app/login-page/login-page.component.css
@@ -1,20 +1,19 @@
 .card{
-    padding: 110px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    padding: 2rem;
+    position: relative;
     font-family: Tahoma;
     background-color: aquamarine;
     border-radius: 9% 30% 17%;
     border-style: outset;
     border-color: aquamarine;
+    max-width: 400px;
+    margin: 100px auto;
 }
 
 .card-header{
     text-align: center;
     font-size: 40px;
-    margin: 0px 0px 65px;
+    margin: 0px 0px 30px;
 }
 
 ::placeholder{
@@ -23,7 +22,6 @@
 
 .buttons{
     text-align: center;
-    margin: 10px;
 }
 
 .form-control {
