fix: frontend update

--- a/src/app/components/advertisement-card/advertisement-card.component.html
+++ b/src/app/components/advertisement-card/advertisement-card.component.html
@@ -1,6 +1,6 @@
-<div>
-    <div>{{advertisement.title}}</div>
-    <div>{{advertisement.name}}</div>
-    <div>{{advertisement.phone}}</div>
-    <div>{{advertisement.description}}</div>
+<div class="plates">
+    <div class="title">{{advertisement.title}}</div>
+    <div class="name">{{advertisement.name}}</div>
+    <div class="phone">{{advertisement.phone}}</div>
+    <div class="description">{{advertisement.description}}</div>
 </div>
