--- a/src/app/pages/registration-page/registration-page.component.css
+++ b/src/app/pages/registration-page/registration-page.component.css
@@ -1,4 +1,3 @@
-/* Card Styles */
 .card {
     padding: 2rem;
     position: relative;
@@ -17,7 +16,6 @@
     margin: 0 0 30px;
 }
 
-/* Form Styles */
 ::placeholder {
     text-align: center;
 }
@@ -36,7 +34,6 @@
     text-align: center;
 }
 
-/* Buttons Styles */
 .buttons {
     margin: 10px;
 }
@@ -47,61 +44,40 @@
 }
 
 button {
-    align-items: center;
-    background-color: #fee6e3;
-    border: 2px solid #111;
-    border-radius: 8px;
+    width: 250px;
+    padding: 20px;
+    margin: 5px;
+    background-color: aquamarine;
+    border: 3px solid rgb(48, 100, 83);
+    border-radius: 1.5rem;
     box-sizing: border-box;
-    color: #111;
+    color: #000;
     cursor: pointer;
-    display: flex;
-    font-family: Inter, sans-serif;
-    font-size: 16px;
-    height: 48px;
-    justify-content: center;
-    line-height: 24px;
-    max-width: 100%;
-    padding: 0 25px;
-    position: relative;
+    display: inline-block;
+    font-family: "Basier circle",-apple-system,system-ui,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
+    font-size: 1.1rem;
+    font-weight: 600;
+    line-height: 1;
+    padding: 1rem 1.6rem;
     text-align: center;
-    text-decoration: none;
+    text-decoration: none #0d172a solid;
+    text-decoration-thickness: auto;
+    transition: all .1s cubic-bezier(.4, 0, .2, 1);
+    box-shadow: 0px 1px 2px rgba(166, 175, 195, 0.25);
     user-select: none;
     -webkit-user-select: none;
     touch-action: manipulation;
-    margin: 20px;
-}
-
-button:after {
-    background-color: #111;
-    border-radius: 8px;
-    content: "";
-    display: block;
-    height: 48px;
-    left: 0;
-    width: 100%;
-    position: absolute;
-    top: -2px;
-    transform: translate(8px, 8px);
-    transition: transform .2s ease-out;
-    z-index: -1;
-}
-
-button:hover:after {
-    transform: translate(0, 0);
-}
-
-button:active {
-    background-color: #ffdeda;
-    outline: 0;
-}
-
-button:hover {
-    outline: 0;
-}
-
-/* Media Query */
-@media (min-width: 768px) {
-    button {
-        padding: 0 40px;
-    }
-}
+  }
+  
+  button:hover {
+    background-color: rgb(48, 100, 83);
+    color: #fff;
+    border: 3px solid aquamarine;
+  }
+  
+  @media (min-width: 768px) {
+  .button {
+    font-size: 1.125rem;
+    padding: 1rem 2rem;
+  }
+  }
