fix: advertisement cards

--- a/src/app/components/advertisement-card/advertisement-card.component.html
+++ b/src/app/components/advertisement-card/advertisement-card.component.html
@@ -3,4 +3,5 @@
     <div class="name">{{advertisement.name}}</div>
     <div class="phone">{{advertisement.phone}}</div>
     <div class="description">{{advertisement.description}}</div>
+    <button (click)="deleteAdvertisement(index)">Törlés</button>
 </div>
